--- a/client/src/components/mainpages/createBoard/createBoard.css
+++ b/client/src/components/mainpages/createBoard/createBoard.css
@@ -34,16 +34,15 @@
     margin: auto;
 }
 #file_img{
-    width: 100%;
-    height: 100%;
+  
     position: absolute;
     top:0;
     left: 0;
     background: white;
 }
 #file_img img{
-    width: 100%;
-    height: 100%;
+    width: 250px;
+    height: 250px;
     display: block;
     object-fit: cover;
 }
