--- a/client/src/components/mainpages/utils/boardItem/boardItem.css
+++ b/client/src/components/mainpages/utils/boardItem/boardItem.css
@@ -1,11 +1,12 @@
-.product_card {
+.board_card {
     transition: 0.3s;
-    width: 20%;
+    width: 19%;
     margin: 10px;
+    margin-top: 50px;
     border: 1px solid black;
 }
 
-.product_card img {
+.board_card img {
     margin-left: auto;
     margin-right: auto;
     display: block;
@@ -15,28 +16,32 @@
     object-fit: cover;
 }
 
-.product_box h2 {
-    width: 100%;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    white-space: nowrap;
-    text-transform: capitalize;
-    cursor: pointer;
-    color: #323232;
+.board_box {
+    max-height: 90px;
 }
 
-.product_card span {
+.board_box h3 {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    height: 70px;
+    text-align: center;
+}
+
+.board_card span {
     color: crimson;
 }
 
-.product_box p {
+.board_box p {
     width: 100%;
     display: -webkit-box;
     -webkit-box-orient: vertical;
-    -webkit-line-clamp: 3;
-    /* height: 70px; */
+    -webkit-line-clamp: 2;
     overflow: hidden;
     color: #323232;
+
 }
 
 .row_btn {
@@ -66,7 +71,7 @@
     margin-left: 5px;
 }
 
-.product_card input {
+.board_card input {
     position: absolute;
     width: 25px;
     height: 25px;
